--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>SAM PEINTURE FER FORGE’</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fontello.css">
-    <link rel="shortcut icon" href="/imagenes/favicom-sam.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="imagenes/favicom-sam.ico" type="image/x-icon">
 </head>
 <body>
     <!--NUEVO BTN DE WSP-->
