--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 le sablage, l'application d'antirouille et de peinture, ainsi que des travaux de réparation et de soudure. De la peinture
                 antirouille aussi pour double protection De la ANTIROUILLE (red oxi).
                 Tout le materiel include et de la meilleure qualité. De plus, tous nos travaux sont garantis. Contactez-nous pour une
-                soumission gratuite et découvrez pourquoi votre demande est notre priorité. Références disponibles pour clientes satisfait.
+                soumission gratuite et découvrez pourquoi votre demande est notre priorité. Références disponibles pour clientes satisfait. A apell Nous +1 (514)-918-1912 
             </p>
             <a href="#contact" class="btn-1">Contactez-nous</a>
         </div>
