--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <textarea class="campo" name="comments" cols="30" rows="10" placeholder="Message"></textarea>
                     <input class="btn-2" type="submit" value="Envoyer">
 
-                    <input type="hidden" name="_next" value="http://localhost:8000">
+                    <input type="hidden" name="_next" value="https://peintureferforge.com/">
                     <input type="hidden" name="_captcha" value="false">
                 </form>
             </div>
